@@ -7,32 +7,32 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.71 (gritter) 8/12/06";
+	"@(#)/usr/ucb/otfdump.sl	7.72 (gritter) 8/12/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.71 (gritter) 8/12/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.71 (gritter) 8/12/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.72 (gritter) 8/12/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.72 (gritter) 8/12/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.71 (gritter) 8/12/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.72 (gritter) 8/12/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.71 (gritter) 8/12/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.72 (gritter) 8/12/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.71";
+const char revision[] = "7.72";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.77 (gritter) 8/12/06
+ext.h: * Sccsid @(#)ext.h	1.78 (gritter) 8/12/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.113 (gritter) 8/12/06
 n2.c: * Sccsid @(#)n2.c	1.28 (gritter) 8/9/06
 n3.c: * Sccsid @(#)n3.c	1.141 (gritter) 8/12/06
-n4.c: * Sccsid @(#)n4.c	1.60 (gritter) 8/12/06
-n5.c: * Sccsid @(#)n5.c	1.81 (gritter) 8/12/06
+n4.c: * Sccsid @(#)n4.c	1.61 (gritter) 8/12/06
+n5.c: * Sccsid @(#)n5.c	1.84 (gritter) 8/12/06
 n7.c: * Sccsid @(#)n7.c	1.93 (gritter) 8/12/06
 n8.c: * Sccsid @(#)n8.c	1.33 (gritter) 8/6/06
 n9.c: * Sccsid @(#)n9.c	1.61 (gritter) 8/12/06
-ni.c: * Sccsid @(#)ni.c	1.36 (gritter) 8/9/06
-nii.c: * Sccsid @(#)nii.c	1.41 (gritter) 8/6/06
+ni.c: * Sccsid @(#)ni.c	1.37 (gritter) 8/12/06
+nii.c: * Sccsid @(#)nii.c	1.42 (gritter) 8/12/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.122 (gritter) 8/12/06
+tdef.h: * Sccsid @(#)tdef.h	1.123 (gritter) 8/12/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.29 (gritter) 8/7/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.47 (gritter) 8/12/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.41 (gritter) 8/12/06
